# jointed

./: .gitignore  AGENTS.md  alembic.ini  pyproject.toml  render.yaml  run-puzzle-api.bat
.cursor/rules/: operating.mdc
alembic/: env.py
alembic/versions/: 001_initial.py  002_puzzles_bespoke.py  003_graph_schema.py
app/: __init__.py  auth.py  bespoke_puzzle.py  config.py  csv_import.py  database.py  lexicon.py  main.py  models.py  normalize.py  puzzle_generator.py  schemas.py
app/routers/: import_csv.py  puzzle.py
docs/: jointed_algorithm_v1.md  jointed_db_schema.md
scripts/: import_words_csv.py  promote_db.py  seed.py
static/: index.html
tests/: conftest.py  test_bespoke.py  test_csv_import.py  test_health.py
